--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
     <!-- end header section -->
     <!-- slider section -->
     <section class="slider_section ">
-      <div class="container ">
+      <div class="container background-slider">
         <div class="row">
           <div class="col-md-6 ">
             <div class="detail-box company-name">
-              <img src="images/home/logo and title.png" style="margin-top: 50px;margin-bottom: 50px;" width="160"
-                alt="Hoang Anh Natural" />
+              <img src="images/home/logo and title.png" class="slider-logo" alt="Hoang Anh Natural" />
               <h3>COMPANY PROFILE</h3>
               <h4>HỒ SƠ NĂNG LỰC</h4>
               <hr style="background-color: #ffffff;">
@@ -111,8 +110,8 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="img-box" >
-              <img src="images/home/cam.jpg" alt="">
+            <div class="img-box">
+              <img src="images/home-right-1.png" alt="">
             </div>
           </div>
         </div>
@@ -185,24 +184,53 @@
   <section class="about_section layout_padding-bottom">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-md-6">
-          <div class="detail-box">
+        <div class="col-lg-7 col-md-6">
+          <div class="detail-box thu-ngo">
             <h2>
-              About us
+              Thư ngỏ
             </h2>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomisedThere are many variations of passages of Lorem Ipsum
-              available, but the majority have suffered alteration in some form, by injected humour, or randomised
+              Công Ty TNHH Hoàng Anh Natural tự hào là đơn vị chuyên cung cấp các sản phẩm
+              chất đốt chất lượng cao, phục vụ nhu cầu sản xuất công nghiệp, dân dụng và xuất
+              khẩu.
             </p>
-            <a href="">
+            <p>
+              Với mục tiêu không ngừng phát triển và nâng cao giá trị sản phẩm, chúng tôi cam kết
+              mang đến những giải pháp tối ưu, thân thiện với môi trường, giúp khách hàng tối đa
+              hóa hiệu quả sử dụng năng lượng sạch.
+            </p>
+            <p>
+              Nhờ vào đội ngũ nhân sự giàu kinh nghiệm và quy trình sản xuất hiện đại, Hoàng Anh
+              Natural luôn sẵn sàng đáp ứng mọi yêu cầu khắt khe của thị trường trong nước và
+              quốc tế.
+            </p>
+            <p>
+              Chúng tôi xin gửi lời cảm ơn chân thành đến tất cả quý khách hàng, đối tác và cộng
+              đồng đã tin tưởng và đồng hành cùng công ty trong suốt chặng đường phát triển.
+              Chính sự ủng hộ và hợp tác của quý vị đã là động lực mạnh mẽ giúp chúng tôi đạt
+              được những thành công đáng tự hào ngày hôm nay.
+            </p>
+            <p>
+              Trân trọng!
+            </p>
+            <img class="signature" src="images/sign.png" alt="">
+            <!-- <div>
+              <h4 style="font-family: ;">
+                Hoàng Anh
+              </h4>
+              <h4>
+                NATURAL
+              </h4>
+            </div> -->
+
+            <!-- <a href="">
               Read More
-            </a>
+            </a> -->
           </div>
         </div>
-        <div class="col-lg-7 col-md-6">
+        <div class="col-lg-5 col-md-6">
           <div class="img-box">
-            <img src="images/home/thu-ngo.png" alt="">
+            <img src="images/about-us-right1.png" alt="">
           </div>
         </div>
       </div>
