--- a/index.html
+++ b/index.html
@@ -186,11 +186,12 @@
       <div class="row">
         <div class="col-lg-7 col-md-6">
           <div class="detail-box thu-ngo">
-            <h2>
+            <h2 class="title-gradient">
               Thư ngỏ
             </h2>
+            <hr class="hr-gradient">
             <p>
-              Công Ty TNHH Hoàng Anh Natural tự hào là đơn vị chuyên cung cấp các sản phẩm
+              <b><span class="title-gradient">Công Ty TNHH Hoàng Anh Natural</span></b> tự hào là đơn vị chuyên cung cấp các sản phẩm
               chất đốt chất lượng cao, phục vụ nhu cầu sản xuất công nghiệp, dân dụng và xuất
               khẩu.
             </p>
@@ -228,7 +229,7 @@
             </a> -->
           </div>
         </div>
-        <div class="col-lg-5 col-md-6">
+        <div class="col-lg-5 col-md-6  remove-padding-right">
           <div class="img-box">
             <img src="images/about-us-right1.png" alt="">
           </div>
@@ -240,23 +241,43 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-5 col-md-6">
-          <div class="detail-box">
-            <h2>
-              About us
+          <div class="detail-box thong-tin-cty">
+            <h2 class="title-gradient">
+              THÔNG TIN CÔNG TY
             </h2>
+            <hr class="hr-gradient">
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomisedThere are many variations of passages of Lorem Ipsum
-              available, but the majority have suffered alteration in some form, by injected humour, or randomised
+              <b>• Tên công ty:</b> CÔNG TY TNHH HOÀNG ANH NATURAL
             </p>
-            <a href="">
+            <p>
+              <b>• Địa chỉ:</b> Số 183/65 Huỳnh Văn Lũy, Tổ 22, Khu phố 3, Phường Phú Lợi, Thành phố Thủ Dầu Một, Bình Dương.
+            </p>
+            <p>
+              <b>• Người đại diện:</b> Ông HOÀNG ĐỨC SINH - Giám Đốc
+            </p>
+            <p>
+              <b>• Ngày cấp giấy phép:</b> 2024-04-22 
+            </p>
+            <p>
+              <b>• Mã số thuế:</b> 3703205493
+            </p>
+            <p>
+              <b>• Điện thoại:</b> 0847.785.599 Mr.Toàn - 0983178191 Mr. Sinh
+            </p>
+            <p>
+              <b>• Email:</b> hoanganhnatural@gmail.com
+            </p>
+            <p>
+              <b>• Website:</b> <a class="link-cty" href="https://hoanganhnatural.vn">https://hoanganhnatural.vn</a>
+            </p>
+            <!-- <a href="">
               Read More
-            </a>
+            </a> -->
           </div>
         </div>
-        <div class="col-lg-7 col-md-6">
-          <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+        <div class="col-lg-7 col-md-6 remove-padding-right">
+          <div class="img-box gradient-border">
+            <img src="images/chat-dot.png" alt="">
           </div>
         </div>
       </div>
@@ -297,7 +318,24 @@
   </section>
 
   <!-- end professional section -->
-
+  <section class="about_section layout_padding-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <div class="detail-box thong-tin-cty">
+            <h2 class="title-gradient" style="line-height: 2.5;">
+              SƠ ĐỒ TỔ CHỨC
+            </h2>
+            <hr class="hr-gradient">
+            <div class="img-box">
+              <img src="images/so-do-to-chuc.png" alt="">
+            </div>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </section>
   <!-- service section -->
 
   <section class="service_section layout_padding">
