remove html tag

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayDateYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://hoanganhnatural.vn">Hoang Anh Natural</a>
       </p>
     </div>
   </footer>
