--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
 
   <title>Hoang Anh Natural</title>
-
+  <link rel="icon" href="images/home/logo.png" type="image/x-icon">
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -39,7 +39,7 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : 0847.785.599 - 0983.178.191
               </span>
             </a>
             <a href="">
@@ -591,7 +591,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayDateYear"></span> All Rights Reserved By
+        &copy; <span id="displayDateYear"></span> Design By
         <a href="https://hoanganhnatural.vn">Hoang Anh Natural</a>
       </p>
     </div>
